#######################################
2014-09-03 (Version 1.0.0)
#######################################
*Fixed small bug in the qnhyper() function.  Fixed an incorrect assignment in the dnyhper()
 and the pnhyper() functions.
*Added the "EX" option for an exact method calculation in the neghypertol.int() function.
*Added the "EX" option for an exact method calculation and fixed how lower and upper bounds 
 were defined in the hypertol.int() function. 
*Added the "YM" method to nptol.int(), which is the Young-Mathew method for improved nonparametric 
 tolerance intervals based on interpolated and extrapolated order statistics.
*Updated some documentation.
*Updated my contact e-mail as maintainer.


#######################################
2013-10-11 (Version 0.5.3)
#######################################
*Updated the "OCT" option in the K.factor() function to allow the user to use the degrees of
 freedom option, "f".
*Fixed a bug in the bonftol.int() function.  The "alpha" argument was not passed correctly to
 the type of tolerance interval being calculated.  Thanks to Alson Look for reporting this bug.
*Updated references.


#######################################
2012-09-23 (Version 0.5.2)
#######################################
*The mvtol.region() function was updated to include many different ways to approximate the tolerance factor for
 multivariate normal data.  These were mainly included for comparative purposes.  The default method ("KM") is the 
 Krishnamoorthy-Mondal method, which was the method used in all previous versions of the 'tolerance' package.
*Fixed a bug in the K.table() function.  When summarizing by "n", the wrong indexing was used, thus yielding
 incorrect results.


#######################################
2012-08-28 (Version 0.5.1)
#######################################
*The functions related to Zipf-Mandelbrot distributions have been updated. The distribution functions (i.e.,