@@ -1,16 +1,16 @@
 Package: tolerance
 Type: Package
-Title: Functions for calculating tolerance intervals
-Version: 1.0.0
-Date: 2014-09-03
+Title: Functions for Calculating Tolerance Intervals
+Version: 1.1.0
+Date: 2015-04-15
 Authors@R: c(person("Derek S.", "Young", role = c("aut", "cre"),
 	email = "derek.young@uky.edu"))
 Depends: rgl, stats4
-Description: Tolerance limits provide the limits between which we can expect to find a specified proportion of a sampled population with a given level of confidence.  This package provides functions for estimating tolerance limits for various distributions.  Plotting is also available for tolerance limits of continuous random variables.
+Description: Statistical tolerance limits provide the limits between which we can expect to find a specified proportion of a sampled population with a given level of confidence.  This package provides functions for estimating tolerance limits for various distributions.  Plotting is also available for tolerance limits of continuous random variables.
 License: GPL (>= 2)
-Packaged: 2014-09-03 12:47:57 UTC; dsy109
+Packaged: 2015-04-14 20:03:39 UTC; dsy109
 Author: Derek S. Young [aut, cre]
 Maintainer: Derek S. Young <derek.young@uky.edu>
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-09-03 15:55:50
+Date/Publication: 2015-04-15 14:01:10
