@@ -1,8 +1,8 @@
-5253a579a051c66028bf146c53c10466 *DESCRIPTION
+df104e14232c42d876daef5d9b6a5c8f *DESCRIPTION
 829cfe9a18debd8b2adddcdc564767fc *NAMESPACE
-d5fe7516a69e0ae5795be4030f536d52 *NEWS
+271d5a94f93a0bc50d17775205b906de *NEWS
 3d8c07d39120556283ec12576f186959 *R/F1.R
-ca7c94d527256ab975be7666ba17c0dd *R/Kfactor.R
+a0c1ad18cebb3b1621dfc0caedf2705d *R/Kfactor.R
 df578f20194abc49270f40c50fdc723b *R/Ktable.R
 3b8df74bbcec553f234b066d5673f508 *R/accsamp.R
 7cb141b6e06cc6297774ac5bbd015a3c *R/anovatol.R
@@ -36,6 +36,9 @@ ad12cbb13106ff8ebd7b15704176b262 *R/nonparregtolint.R
 c1a15806648645642956945b4c36fc86 *R/nporder.R
 3c323d14a953353fb723d552d8fb9834 *R/paretotolint.R
 fa2da85ee6ac6e87db2cf1227a7c065b *R/plottol.R
+2c59c45be8d2f01a81e5fb47805d964a *R/poislind.R
+e26fb8b3076c21116eb5feb1bbfc6896 *R/poislindll.R
+f831af387dad10f9dff81edfe517bd8b *R/poislindtolint.R
 cdb4a05f0b2d437de2c7b183b92ec848 *R/poistolint.R
 3125582d83618426662e8da7e93ab20b *R/rFUN.R
 1b0722b125aa261a0180c2319508e012 *R/regtolint.R
@@ -81,6 +84,9 @@ d423065995f3e8bf5b8985173f2fe129 *man/normtolint.Rd
 a3df8b9cbf916b17fd06a6abd79dfc62 *man/nporder.Rd
 4e5486c42f7e087ab76169da0cc8a161 *man/paretotolint.Rd
 2f93d4edbc3a6e546e70f8496bf13bb7 *man/plottol.Rd
+904911270f257e37c5bc93a66c77363f *man/poislind.Rd
+1b1112ce409559cf9762eb86595c177c *man/poislindll.Rd
+696f9a50cfaf0565798b572387440451 *man/poislindtolint.Rd
 2fe746bc3cd6446cdf9233d2bcf84276 *man/poistolint.Rd
 4608a926925e73f94ba97165a39127e9 *man/regtolint.Rd
 f97e7f33cfa18b55c7c3e7630e343b9d *man/tolerance-internal.Rd
